Revert "Make it available to use other icons for slides mode"
This reverts commit 35948ed9156bf3200203d27ab02c963b0544fccc.

--- a/zone.paw.stream-deck.mmhmm.sdPlugin/sdpi/slides.html
+++ b/zone.paw.stream-deck.mmhmm.sdPlugin/sdpi/slides.html
@@ -29,6 +29,9 @@
         var slides_mode = document.getElementById( 'slides_mode' );
         slides_mode.value = settings.slides_mode || 'Slides off';
         console.debug( 'pi_init: slides_mode:', slides_mode.value );
+        setSettings({
+          slides_mode: slides_mode.value
+        });
       }
     </script>
   </body>
